--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,9 @@
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
   "cSpell.words": [
-    "editorconfig"
+    "craco",
+    "editorconfig",
+    "formik",
+    "uuidv"
   ]
 }
