--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
+    "formik": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "npm run editorconfig:check & npm run craco:start",
     "build": "craco:build build",
-    "test": "react-scripts test",
+    "test": "npm run craco:test",
     "craco:start": "craco start",
     "craco:build": "craco build",
     "craco:test": "craco test",
@@ -29,6 +33,8 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.1.2",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "babel-plugin-react-scoped-css": "^1.1.1",
