--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
@@ -24,7 +23,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "npm run editorconfig:check & npm run craco:start",
+    "start": "react-scripts start",
     "build": "craco:build build",
     "test": "npm run craco:test",
     "craco:start": "craco start",
