update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
   "files.trimTrailingWhitespace": true,
   "cSpell.words": [
     "Scrollable",
+    "checkmark",
     "childs",
     "craco",
     "editorconfig",
