--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.6",
     "mobx": "^6.3.0",
     "mobx-react-lite": "^3.2.0",
+    "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
