--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "boring-avatars": "^1.5.8",
     "classnames": "^2.3.1",
     "formik": "^2.2.6",
     "mobx": "^6.3.0",
@@ -25,7 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "craco:build build",
+    "build": "react-scripts build",
     "test": "npm run craco:test",
     "craco:start": "craco start",
     "craco:build": "craco build",
