--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
     "boring-avatars": "^1.5.8",
     "classnames": "^2.3.1",
     "formik": "^2.2.6",
