--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "react-router-guards": "^1.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
